gcc/testsuite/g++.dg/init/ref6.C
@@ -1,0 +1,12 @@
+struct B {
+  void g() { }
+};
+
+struct A {
+  void f() {
+    B &b = b;
+    b.g();
+  }
+};
+
+int main(void) { }
